fix: proper swagger config
